# BookmarkEditor

./: .gitignore  CMakeLists.txt  README.md  test1.bmk  test2.bmk
.cache/clangd/index/: add.cc.2B4FE3EC55AE408D.idx  add.h.656FA95C10BFBD03.idx  bmk_controller.cc.C506E18063912861.idx  bmk_controller.h.572103B7DBC0E178.idx  bmk_elements.cc.97DC6133C6008343.idx  bmk_elements.h.9F0D576C68E7306A.idx  bmk_tdd.cc.4AF8C30B1A16C207.idx  command.h.60F2E5F4943A1BBE.idx  gmock-actions.h.6EEE48C078785F6F.idx  gmock-all.cc.745B1992ACA7EEA3.idx  gmock-cardinalities.cc.D2D1EF8BD1201689.idx  gmock-cardinalities.h.6A711C862F02DE92.idx  gmock-generated-actions.h.612E1D7FEFCD6765.idx  gmock-generated-actions.h.6D6FC942F4CDA1A7.idx  gmock-generated-function-mockers.h.86C3BCA5051EDC93.idx  gmock-generated-internal-utils.h.0E59ACA08D61DEA0.idx  gmock-generated-matchers.h.492921280AA9C4AA.idx  gmock-generated-nice-strict.h.4A3573DEE8303328.idx  gmock-internal-utils.cc.7CD9B54032BD4DE9.idx  gmock-internal-utils.h.DA571D3AA84F4ED9.idx  gmock-matchers.cc.BC1AEDBB0845E2EB.idx  gmock-matchers.h.1EEEEB88C86073B0.idx  gmock-matchers.h.BBFA8103A5083D47.idx  gmock-more-actions.h.1046DA7B52BDCF56.idx  gmock-more-matchers.h.EBA03CAE0FF668B5.idx  gmock-port.h.D53128EEE4598E51.idx  gmock-port.h.FE763B104E23CD5C.idx  gmock-spec-builders.cc.944AFAB22EE6B132.idx  gmock-spec-builders.h.5408327661F60D76.idx  gmock.cc.7FA6F9641C71DA37.idx  gmock.h.7FC3FDF42EF817BE.idx  (+42 more)
src/: main.cc
src/include/: add.h  bmk  bmk_controller.h  command  ui
src/main/: main.cc
src/src/: add.cc  add_cmd.cc  bmk_controller.cc  bmk_elements.cc  bookmark.cc  delete_cmd.cc  file_node.cc  label_decorator.cc  show_tree.cc  title.cc
test/: CMakeLists.txt  bmk_tdd.cc
test/googletest-release-1.8.1/googletest/samples/: sample6_unittest.cc
(+11 files in other folders)
